--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -516,7 +516,7 @@
 }
 
 .testimonials_section {
-  height: 100vh;
+  height: 4000px;
   padding-top: 75px;
   padding-bottom: 75px;
 }
@@ -620,6 +620,135 @@
   background-size: cover;
 }
 
+.horizontal_wrapper {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 50px;
+  overflow: hidden;
+  width: 100vw;
+}
+
+.horizontal_scroll_content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 4000px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.image-3 {
+  width: 200px;
+  height: 300px;
+}
+
+.horizontal_progress {
+  position: fixed;
+  left: 0%;
+  top: auto;
+  right: 0%;
+  bottom: 0%;
+  width: 0%;
+  height: 8px;
+  background-color: #3898ec;
+}
+
+.testimonial_card_mid {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 500px;
+  height: 300px;
+  margin: 0px 25px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #000;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #000;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_upper-copy {
+  width: 350px;
+  height: 450px;
+  margin: 0px 25px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #000;
+  border-radius: 20px;
+}
+
+.div-block-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.paragraph-5 {
+  display: block;
+}
+
+._5_star {
+  margin-left: 186px;
+  padding-left: 0px;
+  text-align: right;
+}
+
+.testimonial_author {
+  display: block;
+  margin-left: 228px;
+  text-align: right;
+}
+
+.testimonial_para {
+  font-style: italic;
+}
+
+.testimonial_date {
+  margin-left: 239px;
+  text-align: right;
+}
+
 @media screen and (max-width: 991px) {
   .footer {
     padding-right: 20px;
@@ -664,6 +793,9 @@
     grid-template-columns: 1fr;
     -ms-grid-rows: auto auto auto;
     grid-template-rows: auto auto auto;
+  }
+  .horizontal_wrapper {
+    top: 35px;
   }
 }
 
