--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -51,7 +51,7 @@
 }
 
 .footer_section {
-  background-color: #e0e0e0;
+  background-color: #fafafa;
 }
 
 .section_h2 {
@@ -675,7 +675,7 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card {
+.testimonial_card_1 {
   position: static;
   display: block;
   width: 350px;
@@ -697,12 +697,14 @@
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
-  border: 2px solid #000;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #3898ec;
   border-radius: 20px;
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card.initial_card {
+.testimonial_card_1.initial_card {
   margin-left: 145px;
 }
 
@@ -747,6 +749,328 @@
 .testimonial_date {
   margin-left: 239px;
   text-align: right;
+}
+
+.button-2 {
+  position: fixed;
+  left: auto;
+  top: auto;
+  right: auto;
+  bottom: 0%;
+  width: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: left;
+}
+
+.testimonial_card_2 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #248dea;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_2.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_3 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #1583e4;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_3.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_4 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #1479d1;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_4.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_5 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #126ebe;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_5.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_6 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #1063ac;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_6.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_7 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #0e5899;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_7.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_8 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #0c4e87;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_8.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_9 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #0b4374;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_9.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_10 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #093861;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_10.initial_card {
+  margin-left: 145px;
+}
+
+.testimonial_card_11 {
+  position: static;
+  display: block;
+  width: 350px;
+  height: 500px;
+  margin-top: 58px;
+  margin-right: 25px;
+  margin-left: 25px;
+  padding: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border: 2px solid #072d4f;
+  border-radius: 20px;
+  box-shadow: 4px 4px 15px 0 grey;
+}
+
+.testimonial_card_11.initial_card {
+  margin-left: 145px;
 }
 
 @media screen and (max-width: 991px) {
