Added font awesome icon files, added more treatment conditions and plugged in the icons to the footer

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -389,6 +389,7 @@
 }
 
 .footer_list_item {
+  font-family: 'Fa brands 400', sans-serif;
   color: #fff;
   font-size: 22px;
 }
@@ -455,7 +456,7 @@
   color: #ee0b0b;
 }
 
-.list-item-3 {
+.ailment_list_item {
   color: #ee0b0b;
 }
 
@@ -1234,3 +1235,24 @@
   }
 }
 
+@font-face {
+  font-family: 'Fa brands 400';
+  src: url('../fonts/fa-brands-400.woff2') format('woff2'), url('../fonts/fa-brands-400.eot') format('embedded-opentype'), url('../fonts/fa-brands-400.woff') format('woff'), url('../fonts/fa-brands-400.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Fa 400';
+  src: url('../fonts/fa-regular-400.woff2') format('woff2'), url('../fonts/fa-regular-400.eot') format('embedded-opentype'), url('../fonts/fa-regular-400.woff') format('woff'), url('../fonts/fa-regular-400.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Fa solid 900';
+  src: url('../fonts/fa-solid-900.woff2') format('woff2'), url('../fonts/fa-solid-900.eot') format('embedded-opentype'), url('../fonts/fa-solid-900.woff') format('woff'), url('../fonts/fa-solid-900.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
