Finished footer links aside from the tou and privacy pages, restructured about page

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1074,6 +1074,11 @@
   margin-left: 145px;
 }
 
+.div-block-4 {
+  height: 2px;
+  background-color: #7f2727;
+}
+
 @media screen and (max-width: 991px) {
   .footer {
     padding-right: 20px;
