--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -93,12 +93,6 @@
   padding-bottom: 75px;
 }
 
-.sass {
-  width: 90%;
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .menu_container {
   width: 90%;
   margin-right: auto;
@@ -149,65 +143,6 @@
   text-align: center;
 }
 
-.footer {
-  padding-top: 60px;
-  padding-bottom: 40px;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  text-align: center;
-}
-
-.footer-flex-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 40px;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  text-align: left;
-}
-
-.footer-logo-link {
-  max-height: 60px;
-  min-width: 60px;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
-}
-
-.footer-image {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-  object-fit: contain;
-  -o-object-position: 0% 50%;
-  object-position: 0% 50%;
-}
-
-.footer-heading {
-  margin-top: 0px;
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-.footer-link {
-  display: block;
-  margin-bottom: 10px;
-  color: #444;
-  text-decoration: none;
-}
-
-.footer-link:hover {
-  text-decoration: underline;
-}
-
 .ends_container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -241,19 +176,6 @@
   margin-bottom: 0px;
   border: 1px none #000;
   text-align: left;
-}
-
-.cards-section {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.centered-container {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  text-align: center;
 }
 
 .cards_grid {
@@ -298,31 +220,7 @@
   text-align: center;
 }
 
-.heading-4 {
-  text-align: center;
-}
-
-.heading-5 {
-  text-align: center;
-}
-
 .cards_para {
-  text-align: center;
-}
-
-.paragraph-2 {
-  text-align: center;
-}
-
-.paragraph-3 {
-  text-align: center;
-}
-
-.button {
-  display: block;
-  width: 115px;
-  margin-right: auto;
-  margin-left: auto;
   text-align: center;
 }
 
@@ -443,74 +341,7 @@
   text-align: center;
 }
 
-.div-block-2 {
-  width: 100%;
-  height: 45px;
-}
-
-.image {
-  width: 150px;
-  height: 150px;
-  color: #3898ec;
-}
-
-.list-item {
-  color: #ee0b0b;
-}
-
-.list-item-2 {
-  color: #ee0b0b;
-}
-
 .ailment_list_item {
-  color: #ee0b0b;
-}
-
-.list-item-4 {
-  color: #ee0b0b;
-}
-
-.list-item-5 {
-  color: #ee0b0b;
-}
-
-.list-item-6 {
-  color: #ee0b0b;
-}
-
-.list-item-7 {
-  color: #ee0b0b;
-}
-
-.list-item-8 {
-  color: #ee0b0b;
-}
-
-.list-item-9 {
-  color: #ee0b0b;
-}
-
-.list-item-10 {
-  color: #ee0b0b;
-}
-
-.list-item-11 {
-  color: #ee0b0b;
-}
-
-.list-item-12 {
-  color: #ee0b0b;
-}
-
-.list-item-13 {
-  color: #ee0b0b;
-}
-
-.list-item-14 {
-  color: #ee0b0b;
-}
-
-.list-item-15 {
   color: #ee0b0b;
 }
 
@@ -609,24 +440,6 @@
   flex: 0 auto;
 }
 
-.slider {
-  height: 500px;
-}
-
-.slide {
-  height: 100%;
-}
-
-.slide-2 {
-  height: 100%;
-}
-
-.image-2 {
-  background-image: url('https://d3e54v103j8qbb.cloudfront.net/img/background-image.svg');
-  background-position: 0px 0px;
-  background-size: cover;
-}
-
 .horizontal_wrapper {
   position: -webkit-sticky;
   position: sticky;
@@ -647,11 +460,6 @@
   align-items: center;
 }
 
-.image-3 {
-  width: 200px;
-  height: 300px;
-}
-
 .horizontal_progress {
   position: fixed;
   left: 0%;
@@ -661,25 +469,6 @@
   width: 0%;
   height: 8px;
   background-color: #3898ec;
-}
-
-.testimonial_card_mid {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 500px;
-  height: 300px;
-  margin: 0px 25px;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #000;
-  border-radius: 20px;
-  box-shadow: 4px 4px 15px 0 grey;
 }
 
 .testimonial_card_1 {
@@ -711,28 +500,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_1.initial_card {
-  margin-left: 145px;
-}
-
-.testimonial_card_upper-copy {
-  width: 350px;
-  height: 450px;
-  margin: 0px 25px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #000;
-  border-radius: 20px;
-}
-
-.div-block-3 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-}
-
 .paragraph-5 {
   display: block;
 }
@@ -758,18 +525,6 @@
   display: block;
   margin-left: 239px;
   text-align: right;
-}
-
-.button-2 {
-  position: fixed;
-  left: auto;
-  top: auto;
-  right: auto;
-  bottom: 0%;
-  width: 100px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: left;
 }
 
 .testimonial_card_2 {
@@ -799,10 +554,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_2.initial_card {
-  margin-left: 145px;
-}
-
 .testimonial_card_3 {
   position: static;
   display: block;
@@ -828,10 +579,6 @@
   border: 2px solid #1583e4;
   border-radius: 20px;
   box-shadow: 4px 4px 15px 0 grey;
-}
-
-.testimonial_card_3.initial_card {
-  margin-left: 145px;
 }
 
 .testimonial_card_4 {
@@ -861,10 +608,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_4.initial_card {
-  margin-left: 145px;
-}
-
 .testimonial_card_5 {
   position: static;
   display: block;
@@ -890,10 +633,6 @@
   border: 2px solid #126ebe;
   border-radius: 20px;
   box-shadow: 4px 4px 15px 0 grey;
-}
-
-.testimonial_card_5.initial_card {
-  margin-left: 145px;
 }
 
 .testimonial_card_6 {
@@ -923,10 +662,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_6.initial_card {
-  margin-left: 145px;
-}
-
 .testimonial_card_7 {
   position: static;
   display: block;
@@ -952,10 +687,6 @@
   border: 2px solid #0e5899;
   border-radius: 20px;
   box-shadow: 4px 4px 15px 0 grey;
-}
-
-.testimonial_card_7.initial_card {
-  margin-left: 145px;
 }
 
 .testimonial_card_8 {
@@ -985,10 +716,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_8.initial_card {
-  margin-left: 145px;
-}
-
 .testimonial_card_9 {
   position: static;
   display: block;
@@ -1014,10 +741,6 @@
   border: 2px solid #0b4374;
   border-radius: 20px;
   box-shadow: 4px 4px 15px 0 grey;
-}
-
-.testimonial_card_9.initial_card {
-  margin-left: 145px;
 }
 
 .testimonial_card_10 {
@@ -1047,10 +770,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_10.initial_card {
-  margin-left: 145px;
-}
-
 .testimonial_card_11 {
   position: static;
   display: block;
@@ -1078,10 +797,6 @@
   box-shadow: 4px 4px 15px 0 grey;
 }
 
-.testimonial_card_11.initial_card {
-  margin-left: 145px;
-}
-
 .blue_divide {
   height: 2px;
   margin-bottom: 15px;
@@ -1102,19 +817,7 @@
   margin-bottom: 0px;
 }
 
-.blue_divide_half {
-  width: 50%;
-  height: 2px;
-  margin-bottom: 15px;
-  background-color: #3898ec;
-}
-
 .ryu_h4 {
-  margin: 10px 0px;
-  font-style: italic;
-}
-
-.ryu_h5 {
   margin: 10px 0px;
   font-style: italic;
 }
@@ -1127,12 +830,6 @@
 ._55_block {
   width: 55%;
   padding: 25px;
-}
-
-.testimonial_block_grey {
-  padding: 50px;
-  border-bottom: 1px solid #3898ec;
-  background-color: #fff;
 }
 
 .testimonial_block_white {
@@ -1165,11 +862,11 @@
   text-align: right;
 }
 
+.filter-button {
+  margin: 0px 29px;
+}
+
 @media screen and (max-width: 991px) {
-  .footer {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
   .cards_grid {
     grid-column-gap: 20px;
   }
@@ -1191,16 +888,6 @@
 }
 
 @media screen and (max-width: 767px) {
-  .footer {
-    padding: 40px 20px;
-  }
-  .footer-image {
-    -o-object-fit: contain;
-    object-fit: contain;
-  }
-  .cards-section {
-    padding: 40px 20px;
-  }
   .cards_grid {
     max-width: none;
     -ms-grid-row-align: stretch;
@@ -1216,27 +903,6 @@
 }
 
 @media screen and (max-width: 479px) {
-  .footer {
-    padding-right: 20px;
-    padding-left: 20px;
-    text-align: left;
-  }
-  .footer-flex-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .footer-logo-link {
-    height: 60px;
-  }
-  .footer-heading {
-    margin-top: 20px;
-  }
-  .centered-container {
-    text-align: left;
-  }
   .cards_grid {
     margin-right: 0px;
     margin-left: 0px;
