--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -74,16 +74,19 @@
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  border-bottom: 1px solid #3898ec;
+  border: 1px none #000;
 }
 
 ._2_block {
+  overflow: visible;
   width: 50%;
-  padding: 25px;
+  padding: 0px;
   -webkit-box-flex: 0;
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
+  -o-object-fit: fill;
+  object-fit: fill;
 }
 
 .contact_section {
@@ -807,7 +810,7 @@
 
 .blue_divide {
   height: 2px;
-  margin-bottom: 15px;
+  margin: 24px;
   background-color: #3898ec;
 }
 
@@ -908,6 +911,8 @@
 
 .conditions_treated_page {
   height: auto;
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
 
 .ryu_button {
@@ -977,7 +982,7 @@
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  border-bottom: 1px solid #3898ec;
+  border: 1px none #000;
 }
 
 .ailment_h3_left {
@@ -1013,6 +1018,267 @@
 
 .image {
   margin: 0px;
+}
+
+.image-2 {
+  overflow: visible;
+  width: 100%;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(#fff));
+  background-image: linear-gradient(180deg, transparent, #fff);
+  opacity: 1;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.neurological_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/man_suffering_from_headache.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.services_mask_right {
+  height: 100%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#fff), color-stop(60%, transparent));
+  background-image: linear-gradient(90deg, #fff, transparent 60%);
+}
+
+.dermatological_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/girl_with_acne.jpg');
+  background-position: 100% 50%;
+  background-size: auto;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.muscoskeletal_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/man_with_back_pain.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.services_mask_left {
+  height: 100%;
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(40%, transparent), to(#fff));
+  background-image: linear-gradient(90deg, transparent 40%, #fff);
+}
+
+.urological_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/lady_dealing_with_urinary_problems.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.gastrointestinal_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/woman_with_ibs.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.addiction_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/man_battling_addiction.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.respitory_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/senior_man_with_earache.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.reproductive_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/woman_pregnant_with_baby.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.chronic_conditions_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/male_with_kidney_pain.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.ent_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/female_sick_with_cold.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.psychological_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/teen_girl_suffering_with_depression.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.circulatory_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/senior_woman_with_heart_problem.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.autoimmune_disorders_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/man_with_autoimmune_disease.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.immune_system_block {
+  overflow: visible;
+  width: 50%;
+  height: 100%;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-image: url('../images/man_with_weak_immune_system.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -o-object-fit: fill;
+  object-fit: fill;
 }
 
 @media screen and (max-width: 991px) {
