--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -29,7 +29,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  background-color: #fff;
+  background-color: #fafafa;
 }
 
 .about_section {
@@ -57,7 +57,9 @@
 .section_h2 {
   margin-top: 15px;
   margin-bottom: 15px;
+  font-family: Verdana, Geneva, sans-serif;
   text-align: center;
+  text-shadow: 1px 1px 1px #3898ec;
 }
 
 ._2_block_row_ailment_right {
@@ -66,6 +68,7 @@
   display: -ms-flexbox;
   display: flex;
   height: 300px;
+  margin-bottom: 0px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -74,19 +77,32 @@
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  border: 1px none #000;
+  border-style: none none solid;
+  border-width: 1px;
+  border-color: #000 #000 #3898ec;
 }
 
 ._2_block {
   overflow: visible;
   width: 50%;
   padding: 0px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
   -webkit-box-flex: 0;
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
   -o-object-fit: fill;
   object-fit: fill;
+}
+
+._2_block.margin_left {
+  margin-left: 15px;
+}
+
+._2_block.margin_right {
+  margin-right: 15px;
 }
 
 .contact_section {
@@ -122,15 +138,18 @@
 
 .background-video {
   height: 100vh;
+  text-shadow: 1px 1px 6px #000;
 }
 
-.heading {
+.ryu_title {
   margin-top: 352px;
   margin-right: auto;
   margin-left: auto;
-  font-size: 75px;
-  line-height: 75px;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 80px;
+  line-height: 80px;
   text-align: center;
+  text-shadow: 2px 2px 3px #3898ec;
 }
 
 .parallax_block_needles {
@@ -144,8 +163,10 @@
   background-attachment: fixed;
 }
 
-.heading-2 {
+.ryu_tagline {
+  font-family: Verdana, Geneva, sans-serif;
   text-align: center;
+  text-shadow: 2px 2px 3px #3898ec;
 }
 
 .ends_container {
@@ -173,14 +194,18 @@
 
 ._4_block {
   width: 25%;
-  height: 235px;
   margin: 0px 7px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
 }
 
 .footer_h3 {
   margin-bottom: 0px;
   border: 1px none #000;
+  font-family: Verdana, Geneva, sans-serif;
   text-align: left;
+  text-shadow: 1px 1px 1px #3898ec;
 }
 
 .cards_grid {
@@ -222,7 +247,9 @@
 }
 
 .card_h3 {
+  font-family: Verdana, Geneva, sans-serif;
   text-align: center;
+  text-shadow: 1px 1px 1px #3898ec;
 }
 
 .cards_para {
@@ -354,6 +381,10 @@
   height: 100vh;
 }
 
+.contact_page_section {
+  height: 100vh;
+}
+
 .testimonial_page_section {
   height: auto;
 }
@@ -430,21 +461,29 @@
 
 ._65_block {
   width: 65%;
-  padding: 21px;
+  padding: 0px;
   -webkit-box-flex: 0;
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
 }
 
+._65_block.margin_left {
+  margin-left: 15px;
+}
+
 ._35_block {
   width: 35%;
-  margin: 20px;
+  margin: 0px;
   padding: 0px;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+._35_block.margin_right {
+  margin-right: 15px;
 }
 
 .horizontal_wrapper {
@@ -810,21 +849,25 @@
 
 .blue_divide {
   height: 2px;
-  margin: 24px;
+  margin: 25px 0px;
   background-color: #3898ec;
 }
 
 .submit-button {
   width: 115px;
   height: 45px;
-  border-radius: 7px;
+  margin: 10px 0px 0px;
+  border-radius: 20px;
   background-color: #3898ec;
+  font-weight: 700;
 }
 
 .section_h2_left {
   margin-top: 0px;
   margin-bottom: 0px;
+  font-family: Verdana, Geneva, sans-serif;
   text-align: left;
+  text-shadow: 1px 1px 1px #3898ec;
 }
 
 .paragraph-6 {
@@ -838,12 +881,24 @@
 
 ._45_block {
   width: 45%;
-  padding: 25px;
+  padding: 0px;
+}
+
+._45_block.margin_right {
+  margin-right: 15px;
 }
 
 ._55_block {
   width: 55%;
-  padding: 25px;
+  padding: 0px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+}
+
+._55_block.margin_left {
+  margin-left: 15px;
 }
 
 .testimonial_block_white {
@@ -932,7 +987,7 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  border-radius: 7px;
+  border-radius: 20px;
   text-align: center;
 }
 
@@ -982,16 +1037,20 @@
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  border: 1px none #000;
+  border-style: none none solid;
+  border-width: 1px;
+  border-color: #000 #000 #3898ec;
 }
 
-.ailment_h3_left {
-  text-align: left;
+.ailment_h3 {
+  font-family: Verdana, Geneva, sans-serif;
+  text-align: center;
 }
 
 .ailment_h3_right {
   margin-top: 10px;
-  text-align: left;
+  font-family: Verdana, Geneva, sans-serif;
+  text-align: center;
 }
 
 ._3_block_row {
@@ -1014,6 +1073,18 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+._2_block_row.margin_bottom {
+  margin-bottom: 15px;
+}
+
+._2_block_row.margin_top {
+  margin-top: 15px;
 }
 
 .image {
@@ -1279,6 +1350,109 @@
   background-repeat: no-repeat;
   -o-object-fit: fill;
   object-fit: fill;
+}
+
+.body {
+  font-family: Lato, sans-serif;
+}
+
+._2_block_middle {
+  overflow: visible;
+  width: 50%;
+  padding: 0px;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.ryu_button_schedule {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 165px;
+  height: 45px;
+  margin-top: 35px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 20px;
+  text-align: center;
+  text-shadow: none;
+}
+
+._2_block_left {
+  overflow: visible;
+  width: 50%;
+  margin-right: 15px;
+  padding: 0px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+._2_block_right {
+  overflow: visible;
+  width: 50%;
+  margin-left: 15px;
+  padding: 0px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.nav-link {
+  font-weight: 700;
+}
+
+.nav-link-2 {
+  font-weight: 700;
+}
+
+.nav-link-3 {
+  font-weight: 700;
+}
+
+.nav-link-4 {
+  font-weight: 700;
+}
+
+.nav-link-5 {
+  font-weight: 700;
+}
+
+.nav-link-6 {
+  font-weight: 700;
+}
+
+.nav-link-6.w--current {
+  font-weight: 700;
 }
 
 @media screen and (max-width: 991px) {
