--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1455,6 +1455,190 @@
   font-weight: 700;
 }
 
+.photo {
+  height: 800px;
+}
+
+.photo._6 {
+  background-image: url('../images/heat_lamp_therapy.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.photo._4 {
+  background-image: url('../images/ear_acupuncture.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.photo._1 {
+  background-image: url('../images/acupuncture_treatment.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.photo._3 {
+  background-image: url('../images/cupping_treatment.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.photo._5 {
+  background-image: url('../images/moxibustion_treatment.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.photo._2 {
+  background-image: url('../images/traditional_chinese_herbal_medicine.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.services_picture_section {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.content-holder {
+  position: relative;
+  height: 100%;
+}
+
+.the-content {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.the-content._1 {
+  display: block;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #a6d1f6;
+  color: #fff;
+}
+
+.the-content._2 {
+  display: block;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #81bdf2;
+  color: #fff;
+}
+
+.the-content._5 {
+  display: block;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #1583e4;
+  color: #fff;
+}
+
+.the-content._3 {
+  display: block;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #5caaef;
+  color: #fff;
+}
+
+.the-content._6 {
+  display: block;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #126ebe;
+  color: #fff;
+}
+
+.the-content._4 {
+  display: block;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #3898ec;
+  color: #fff;
+}
+
+.column-2 {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 60px;
+  height: 100vh;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.about_content_h1 {
+  display: block;
+  margin-top: 74px;
+  color: #fff;
+  font-size: 75px;
+  line-height: 75px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.column-1 {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.services_para {
+  padding: 0px 45px;
+}
+
+.services_intro_section {
+  margin: 0px;
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+.services_outro_section {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
 @media screen and (max-width: 991px) {
   .cards_grid {
     grid-column-gap: 20px;
@@ -1512,6 +1696,17 @@
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
+  }
+  .about_content_h1 {
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+  }
+  .column-1 {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
 }
 
